Se modificaron métodos de la clase Carta y de la clase Mazo para que se pudieran trabajar con imágenes al momento de crear una carta o de llenar el mazo, también se realizaron métodos en la clase Mano para el correcto funcionamiento de esta.